--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,9 +9,12 @@ blinker==1.9.0
 boto3==1.40.21
 botocore==1.40.25
 Brotli==1.1.0
+celery==5.4.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+croniter==3.0.3
+cryptography==45.0.7
 Deprecated==1.2.18
 Flask==3.1.2
 Flask-Compress==1.18
